feat: add Docker MCP to investigator and reviewer, remove run_shell_command
- investigator: gains docker__mcp-find, mcp-add, mcp-exec for container logs/state
- reviewer: replace run_shell_command with Docker MCP tools (no shell access)
- settings.template.json: add docker MCP server entry
- setup.sh: add Docker Desktop 4.48+ prerequisite check
- constraint 3 (investigator): clarified Docker MCP allowed, shell still forbidden
- constraints 4-5 (reviewer): shell commands fully prohibited

--- a/settings.template.json
+++ b/settings.template.json
@@ -41,6 +41,10 @@
     "playwright": {
       "command": "__NPX__",
       "args": ["-y", "@playwright/mcp@0.0.68"]
+    },
+    "docker": {
+      "command": "__DOCKER__",
+      "args": ["mcp", "gateway", "run"]
     }
   }
 }
