feat: add BugBoard ambient bug tracking agent
- Self-contained bug-board agent with 16 tools: serena, hashline, context7,
  sequential-thinking, docker, and custom fileops MCP for file writing
- TOML commands: /bugboard:new, /bugboard:status, /bugboard:list, /bugboard:close
- Templates for report.md, metadata.json, config.json, board.md
- Scripts: bugboard-init.sh (idempotent .bugboard/ setup), bugboard-id.sh (next ID)
- Custom fileops MCP server (scripts/fileops-mcp.mjs) providing save_file and
  make_directory -- workaround for Gemini CLI blocking hashline write_file
- Progressive disclosure skill file (skills/bugboard/SKILL.md)
- Fix planner agent: write_file to fileops save_file (same Gemini CLI issue)
- Updated GEMINI.md, settings.template.json, setup.sh for new agent + MCP server

--- a/settings.template.json
+++ b/settings.template.json
@@ -30,6 +30,10 @@
       "command": "__BUNX__",
       "args": ["mcp-hashline-edit-server@0.2.0"]
     },
+    "fileops": {
+      "command": "__NODE__",
+      "args": ["__EXTENSION_DIR__/scripts/fileops-mcp.mjs"]
+    },
     "context7": {
       "command": "__NPX__",
       "args": ["-y", "@upstash/context7-mcp@2.1.1"]
